# gsr

./: Cargo.toml  README.md  build.txt  clippy.txt  files.csv  gallshkey.json  picture-urls.txt  rusty-tags.vi  selections  tags  temp
script/: alter_table_picture.sql  create_db.sh  create_db.sql  export_db.sql  import_db.sql  index.sql  init_tag.sql
src/: actions.rs  args.rs  catalog.rs  commands.rs  comment.rs  completion.rs  database.rs  direction.rs  display.rs  editor.rs  error.rs  gui.rs  image_data.rs  loader.rs  main.rs  navigator.rs  order.rs  palette.rs  path.rs  picture_entry.rs  picture_io.rs  prompt.rs  rank.rs
testdata/: .gallshkey.json  3-cubesIMAGE_DATA.json  ChessSetIMAGE_DATA.json  barIMAGE_DATA.json  big-france-mapIMAGE_DATA.json  bubIMAGE_DATA.json  color-wheelIMAGE_DATA.json  default_shortcuts.json  dummyIMAGE_DATA.json  faureIMAGE_DATA.json  felisIMAGE_DATA.json  flowerIMAGE_DATA.json  fooIMAGE_DATA.json  gusIMAGE_DATA.json  joeIMAGE_DATA.json  quxIMAGE_DATA.json  selection  smallIMAGE_DATA.json  temp  zooIMAGE_DATA.json
testdata/nature/: cumulusIMAGE_DATA.json  flower-copyIMAGE_DATA.json  flowerIMAGE_DATA.json  labradorIMAGE_DATA.json  roseIMAGE_DATA.json
