[package]
name = "gsr2"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
mime = "0.3.17"
image = "0.25.1"
palette_extract = "0.1.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
thumbnailer = "0.5.1"
walkdir = "2.5.0"
regex = "1.10.5"
clap = { version = "4.3.19", features = ["derive"] }
shuffle = "0.1.7"
rand = "0.8.5"
