[package]
name = "gsr"
version = "1.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.3.19", features = ["derive"] }
dirs = "5.0.1"
gtk = { version = "0.6.*", package = "gtk4", features = ["v4_6"] }
image = "0.25.1"
mime = "0.3.17"
palette_extract = "0.1.0"
rand = "0.8.5"
regex = "1.10.5"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
shuffle = "0.1.7"
thumbnailer = "0.5.1"
walkdir = "2.5.0"
rusqlite = { version = "0.37.0", features = ["bundled","blob"] }
compare = "0.1.0"
itertools = "0.14.0"

